2006-03-08  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Version 0.2.7-2, released to fix a dchroot
	crash.

	* schroot/dchroot-session.cc
	(run_impl): Correctly chain up to the base class.

2006-03-08  Roger Leigh  <rleigh@debian.org>

	* Version 0.2.7.

	* debian/changelog: Update for 0.2.7.

	* NEWS: Update for 0.2.7.

2006-03-07  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Bump version to 0.2.7.

	* NEWS: Bump version to 0.2.7.

	* configure.ac: Bump version to 0.2.7.

	* po/en_GB.po: Update translation.

	* schroot/sbuild-auth.cc
	(setupenv): For security, PATH is always set to a sane state for
	root, but only set in other cases if not preserving the
	environment.

	* schroot/sbuild-session.cc
	(run_child): When "command-prefix" has been specified, correctly
	set the filename to pass to execve.  Mark four strings for
	translation.

2006-03-06  Roger Leigh  <rleigh@debian.org>

	* Version 0.2.6.

	* debian/changelog: Update for 0.2.6.

2006-03-06  Roger Leigh  <rleigh@debian.org>

	* po/en_GB.po: Update translation.

2006-03-06  Roger Leigh  <rleigh@debian.org>

	* TODO: Update.

	* schroot/schroot.conf.5.in: Document required ownership and
	permissions for file archives.

	* schroot/sbuild-chroot-file.cc
	(setup_lock): Check ownership and permissions of file archive.

	* schroot/sbuild-chroot-config.cc (check_security): Tidy error
	message formatting.

	* schroot/setup/10mount:
	(do_umount): Only umount if the mountpoint exists.

	* schroot/setup/05file:
	(repack_file): Preserve ownership and permissions of the original
	archive file.

2006-03-06  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.1.in: Document environment sanitising.

	* schroot/schroot.cc
	(main): Allow the environment to be preserved even if changing
	users.

	* schroot/sbuild-auth.cc
	(setupenv): Add SHELL to default environment.  Sanitise the
	environment by removing dangerous variables (the same set used by
	sudo).

2006-03-06  Roger Leigh  <rleigh@debian.org>
